Fix incomplete conversion to target type when it is an interface, e.g. Number (-> Double), CharSequence (->String).